# imooc-manus-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
app/: main.py
app/application/error/: exception.py
app/application/service/: app_config_service.py  status_service.py
app/domain/model/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
app/domain/repository/: app_config_repository.py
app/domain/service/agent/: base.py  planner.py  react.py
app/domain/service/prompt/: planner.py  react.py  system.py
app/domain/service/tool/: base.py  browser.py  mcp.py  search.py
app/infrastructure/json_parser/: repair_json_parser.py
app/infrastructure/logging/: logging.py
app/infrastructure/model/: base.py  demo.py
app/infrastructure/repository/: file_app_config_repository.py
app/infrastructure/search/: bing_search.py
app/infrastructure/storage/: cos.py  postgres.py  redis.py
app/interface/: service_dependency.py
app/interface/endpoint/: app_config_route.py  route.py  status_route.py
app/interface/error/: exception_handler.py
app/interface/schema/: app_config.py  base.py
core/: config.py
test/: conftest.py
test/app/interface/endpoint/: test_status_route.py
