[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "cos-python-sdk-v5>=1.9.39",
    "fastapi>=0.121.2",
    "filelock>=3.20.0",
    "httpx>=0.28.1",
    "json-repair>=0.54.2",
    "markdownify>=1.2.2",
    "mcp>=1.23.3",
    "openai>=2.8.1",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
